--- a/assets/sass/mixins/_project-specific.scss
+++ b/assets/sass/mixins/_project-specific.scss
@@ -27,6 +27,8 @@
 	font-size: 10px;
 };
 
+//generates a list of file links in this format:
+//a[href$=".file"], a[href$=".FILE"]
 @function files_link($files){
 	$file_list: ();
 	@for $i from 1 through length($files) {
@@ -52,6 +54,7 @@
 	@return ($file_list);
 }
 
+//Generates the css that creates the file icons next to file icon links
 @mixin M-download_icons($icon,$color,$lighten:40%,$desaturation:0%){
 	@include M-icon($icon){
 		@extend %file-static-styles;
@@ -60,60 +63,4 @@
 		@include M-grad(desaturate(lighten($color,$lighten),$desaturation),desaturate(lighten($color,$lighten + 30),$desaturation),$backup:#fff);
 	}
 }
-
-///////////////////////////////////
-/*   SHARED ANIMATION EFFECTS   */
-/////////////////////////////////
-@if ($main-sheet == true){
-
-	$popin:
-		(
-			(scale, 0),
-			(opacity, 0),
-		) 0%,
-		(
-			(scale, 1.2),
-			(opacity, 1),
-		) 70%,
-		(
-			(scale, 1),
-			(opacity, 1),
-		) 100%
-	;
-
-	@include M-kf-definition(popin,$popin);
-
-	$pulse:
-		(
-			(scale, 1),
-		) 0%,
-		(
-			(scale, 1.1),
-		) 30%,
-		(
-			(scale, 1),
-		) 50%,
-		(
-			(scale, 1),
-		) 100%
-	;
-	@include M-kf-definition(pulse,$pulse);
-
-}//end if statement
-
-//POP IN EFFECT
-@mixin M-popin($settings: 0.5s){
-	opacity: 1;
-	@include M-kf-predefined(popin,$settings,1,ease-out);
-}
-%popin { @include M-popin; }
-
-
-//PULSE EFFECT
-@mixin M-pulse($loops:infinite,$settings: 1s){
-	@include M-kf-predefined(pulse,$settings,$loops);
-}
-%pulse { @include M-pulse; }
-%pulse-single { @include M-pulse(1); }
-
 
