--- a/assets/css/media-merge/style.css
+++ b/assets/css/media-merge/style.css
@@ -196,7 +196,7 @@ input[type="checkbox"] + label:after {
 \*******************************************/
 
 .popin,
-.js-popins__piece.js-popins__piece--pop {
+.js-popins-piece.js-popins-piece--pop {
 	opacity: 1;
 	-webkit-animation: popin 0.5s 1 ease-out;
 	animation: popin 0.5s 1 ease-out;
@@ -248,21 +248,6 @@ a.htmlDownload:before {
 	width: 18px;
 	text-align: center;
 	font-size: 10px;
-}
-
-/*   SHARED ANIMATION EFFECTS   */
-
-.popin,
-.js-popins__piece.js-popins__piece--pop {
-	opacity: 1;
-	-webkit-animation: popin 0.5s 1 ease-out;
-	animation: popin 0.5s 1 ease-out;
-}
-
-.pulse,
-.pulse--onHover:hover {
-	-webkit-animation: pulse 1s infinite linear;
-	animation: pulse 1s infinite linear;
 }
 
 /*icon font*/
@@ -694,6 +679,12 @@ table tbody th {
 	clear: both;
 }
 
+.container {
+	margin: 0 auto;
+	max-width: 1200px;
+	float: none;
+}
+
 .js-count-up,
 .js-alpha-count {
 	-webkit-transition: all 2s ease-in-out;
@@ -730,7 +721,7 @@ table tbody th {
 	transition: all 1s ease-in-out;
 }
 
-.js-popins__piece {
+.js-popins-piece {
 	opacity: 0;
 }
 
@@ -1252,11 +1243,6 @@ input[type="radio"] + label:before {
 			WHOLE PAGE
 **********************************/
 
-.container {
-	margin: 0 auto;
-	max-width: 1200px;
-}
-
 /**********************************
 			HEADER
 **********************************/
@@ -1450,7 +1436,7 @@ input[type="radio"] + label:before {
 		Animations
 **********************************/
 
-.animation-demo-item {
+.animationDemoItem {
 	margin: 5px;
 	padding: 20px;
 	background: #000;
@@ -1459,41 +1445,41 @@ input[type="radio"] + label:before {
 	font-size: 1.3em;
 }
 
-.simple-animation-example {
+.simpleAnimationExample {
 	overflow: hidden;
 }
 
-.simple-animation-example .simple-example-piece {
+.simpleAnimationExample .simpleAnimationExample-piece {
 	position: relative;
 }
 
-.simple-animation-example .simple1 {
+.simpleAnimationExample .simple1 {
 	opacity: 0;
 }
 
-.simple-animation-example .simple2 {
+.simpleAnimationExample .simple2 {
 	bottom: 100%;
 	left: 100%;
 }
 
-.simple-animation-example .simple3 {
+.simpleAnimationExample .simple3 {
 	-webkit-transform: scale(0);
 	-ms-transform: scale(0);
 	transform: scale(0);
 }
 
-.simple-animation-example.activate .simple1 {
+.simpleAnimationExample.activate .simple1 {
 	opacity: 1;
 }
 
-.simple-animation-example.stage2 .simple2 {
+.simpleAnimationExample.stage2 .simple2 {
 	-webkit-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
 	bottom: 0;
 	left: 0;
 }
 
-.simple-animation-example.stage3 .simple3 {
+.simpleAnimationExample.stage3 .simple3 {
 	-webkit-transition: all 2s ease-in-out;
 	transition: all 2s ease-in-out;
 	-webkit-transform: scale(1);
@@ -2324,6 +2310,10 @@ Slip in from the top with perspective on container -----------------------------
 	width: 100%;
 }
 
+.sixths.colspan5 {
+	width: 100%;
+}
+
 }
 
 @media print {
@@ -2521,112 +2511,6 @@ h3 {
 	-webkit-transform: rotate(360deg);
 	-ms-transform: rotate(360deg);
 	transform: rotate(360deg);
-}
-
-}
-
-@-webkit-keyframes popin {
-
-0% {
-	-webkit-transform: scale(0);
-	-ms-transform: scale(0);
-	transform: scale(0);
-	opacity: 0;
-}
-
-70% {
-	-webkit-transform: scale(1.2);
-	-ms-transform: scale(1.2);
-	transform: scale(1.2);
-	opacity: 1;
-}
-
-100% {
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-	opacity: 1;
-}
-
-}
-
-@keyframes popin {
-
-0% {
-	-webkit-transform: scale(0);
-	-ms-transform: scale(0);
-	transform: scale(0);
-	opacity: 0;
-}
-
-70% {
-	-webkit-transform: scale(1.2);
-	-ms-transform: scale(1.2);
-	transform: scale(1.2);
-	opacity: 1;
-}
-
-100% {
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-	opacity: 1;
-}
-
-}
-
-@-webkit-keyframes pulse {
-
-0% {
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-}
-
-30% {
-	-webkit-transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	transform: scale(1.1);
-}
-
-50% {
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-}
-
-100% {
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-}
-
-}
-
-@keyframes pulse {
-
-0% {
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-}
-
-30% {
-	-webkit-transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	transform: scale(1.1);
-}
-
-50% {
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-}
-
-100% {
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
 }
 
 }
