--- a/assets/css/style-lt-ie9.css
+++ b/assets/css/style-lt-ie9.css
@@ -49,7 +49,7 @@
 	grows large, then snaps to normal size
 	(requires element to start at opacity:0)
 \*******************************************/
-.popin, .js-popins__piece.js-popins__piece--pop { opacity: 1; }
+.popin, .js-popins-piece.js-popins-piece--pop { opacity: 1; }
 
 /*******************************************\
 	PULSE EFFECT
@@ -58,9 +58,6 @@
 	then shrinks again.
 \*******************************************/
 a[href$=".pdf"]:before, a[href$=".PDF"]:before, a[href$=".doc"]:before, a[href$=".docx"]:before, a[href$=".DOC"]:before, a[href$=".DOCX"]:before, a[href$=".xls"]:before, a[href$=".xlsx"]:before, a[href$=".XLS"]:before, a[href$=".XLSX"]:before, a[href$=".ppt"]:before, a[href$=".pptx"]:before, a[href$=".PPT"]:before, a[href$=".PPTX"]:before, a[href$=".txt"]:before, a[href$=".TXT"]:before, a[href$=".mp3"]:before, a[href$=".MP3"]:before, a[href*="itunes"]:before, a.htmlDownload:before { border: 1px solid #b9282b; padding: 2px 0; content: ""; margin-right: 5px; width: 18px; text-align: center; font-size: 10px; }
-
-/*   SHARED ANIMATION EFFECTS   */
-.popin, .js-popins__piece.js-popins__piece--pop { opacity: 1; }
 
 /*icon font*/
 @font-face { font-family: 'icons'; src: url("fonts/icons.eot?-nx4lre"); src: url("fonts/icons.eot?#iefix-nx4lre") format("embedded-opentype"), url("fonts/icons.woff?-nx4lre") format("woff"), url("fonts/icons.ttf?-nx4lre") format("truetype"), url("fonts/icons.svg?-nx4lre#icons") format("svg"); font-weight: normal; font-style: normal; }
@@ -213,13 +210,15 @@ table tbody th { font-weight: bold; }
 
 .clear { clear: both; }
 
+.container { margin: 0 auto; max-width: 1200px; float: none; }
+
 .js-count-up, .js-alpha-count { white-space: nowrap; }
 .js .js-count-up, .js .js-alpha-count { opacity: 0; }
 .js-count-up + *, .js-alpha-count + * { opacity: 0; }
 .js-count-up.activate, .activate.js-alpha-count, .js-count-up.forced-visible, .forced-visible.js-alpha-count { opacity: 1; }
 .js-count-up.activate + *, .activate.js-alpha-count + *, .js-count-up.forced-visible + *, .forced-visible.js-alpha-count + * { opacity: 1; }
 
-.js-popins__piece { opacity: 0; }
+.js-popins-piece { opacity: 0; }
 
 .js .lightbox-info { display: none; }
 
@@ -330,8 +329,6 @@ input[type="radio"], input[type="checkbox"] { float: left; }
 /**********************************
 			WHOLE PAGE
 **********************************/
-.container { margin: 0 auto; max-width: 1200px; }
-
 /**********************************
 			HEADER
 **********************************/
@@ -375,14 +372,14 @@ input[type="radio"], input[type="checkbox"] { float: left; }
 /**********************************
 		Animations
 **********************************/
-.animation-demo-item { margin: 5px; padding: 20px; background: #000; color: #fff; text-align: center; font-size: 1.3em; }
+.animationDemoItem { margin: 5px; padding: 20px; background: #000; color: #fff; text-align: center; font-size: 1.3em; }
 
-.simple-animation-example { overflow: hidden; }
-.simple-animation-example .simple-example-piece { position: relative; }
-.simple-animation-example .simple1 { opacity: 0; }
-.simple-animation-example .simple2 { bottom: 100%; left: 100%; }
-.simple-animation-example.activate .simple1 { opacity: 1; }
-.simple-animation-example.stage2 .simple2 { bottom: 0; left: 0; }
+.simpleAnimationExample { overflow: hidden; }
+.simpleAnimationExample .simpleAnimationExample-piece { position: relative; }
+.simpleAnimationExample .simple1 { opacity: 0; }
+.simpleAnimationExample .simple2 { bottom: 100%; left: 100%; }
+.simpleAnimationExample.activate .simple1 { opacity: 1; }
+.simpleAnimationExample.stage2 .simple2 { bottom: 0; left: 0; }
 
 /*this should appear in the IE8 style sheet but not the regular one*/
 /* jQuery Custombox v1.1.3 - 2014/02/18 jQuery Modal Window Effects. http://dixso.github.io/custombox/ (c) 2014 Julio De La Calle - http://dixso.net - @dixso9  Under MIT License - http://www.opensource.org/licenses/mit-license.php */
