--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ input[type="radio"]:checked + label:after, input[type="checkbox"]:checked + labe
 @keyframes popin { 0% { -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); opacity: 0; }
   70% { -webkit-transform: scale(1.2); -ms-transform: scale(1.2); transform: scale(1.2); opacity: 1; }
   100% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); opacity: 1; } }
-.popin, .js-popins__piece.js-popins__piece--pop { opacity: 1; -webkit-animation: popin 0.5s 1 ease-out; animation: popin 0.5s 1 ease-out; }
+.popin, .js-popins-piece.js-popins-piece--pop { opacity: 1; -webkit-animation: popin 0.5s 1 ease-out; animation: popin 0.5s 1 ease-out; }
 
 /*******************************************\
 	PULSE EFFECT
@@ -118,25 +118,6 @@ input[type="radio"]:checked + label:after, input[type="checkbox"]:checked + labe
 .pulseSingle, .pulseSingle--onHover:hover { -webkit-animation: pulse 1s 1 linear; animation: pulse 1s 1 linear; }
 
 a[href$=".pdf"]:before, a[href$=".PDF"]:before, a[href$=".doc"]:before, a[href$=".docx"]:before, a[href$=".DOC"]:before, a[href$=".DOCX"]:before, a[href$=".xls"]:before, a[href$=".xlsx"]:before, a[href$=".XLS"]:before, a[href$=".XLSX"]:before, a[href$=".ppt"]:before, a[href$=".pptx"]:before, a[href$=".PPT"]:before, a[href$=".PPTX"]:before, a[href$=".txt"]:before, a[href$=".TXT"]:before, a[href$=".mp3"]:before, a[href$=".MP3"]:before, a[href*="itunes"]:before, a.htmlDownload:before { border: 1px solid #b9282b; padding: 2px 0; content: ""; margin-right: 5px; width: 18px; text-align: center; font-size: 10px; }
-
-/*   SHARED ANIMATION EFFECTS   */
-@-webkit-keyframes popin { 0% { -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); opacity: 0; }
-  70% { -webkit-transform: scale(1.2); -ms-transform: scale(1.2); transform: scale(1.2); opacity: 1; }
-  100% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); opacity: 1; } }
-@keyframes popin { 0% { -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); opacity: 0; }
-  70% { -webkit-transform: scale(1.2); -ms-transform: scale(1.2); transform: scale(1.2); opacity: 1; }
-  100% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); opacity: 1; } }
-@-webkit-keyframes pulse { 0% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); }
-  30% { -webkit-transform: scale(1.1); -ms-transform: scale(1.1); transform: scale(1.1); }
-  50% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); }
-  100% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); } }
-@keyframes pulse { 0% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); }
-  30% { -webkit-transform: scale(1.1); -ms-transform: scale(1.1); transform: scale(1.1); }
-  50% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); }
-  100% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); } }
-.popin, .js-popins__piece.js-popins__piece--pop { opacity: 1; -webkit-animation: popin 0.5s 1 ease-out; animation: popin 0.5s 1 ease-out; }
-
-.pulse, .pulse--onHover:hover { -webkit-animation: pulse 1s infinite linear; animation: pulse 1s infinite linear; }
 
 /*icon font*/
 @font-face { font-family: 'icons'; src: url("fonts/icons.eot?-nx4lre"); src: url("fonts/icons.eot?#iefix-nx4lre") format("embedded-opentype"), url("fonts/icons.woff?-nx4lre") format("woff"), url("fonts/icons.ttf?-nx4lre") format("truetype"), url("fonts/icons.svg?-nx4lre#icons") format("svg"); font-weight: normal; font-style: normal; }
@@ -289,6 +270,8 @@ table tbody th { font-weight: bold; }
 
 .clear { clear: both; }
 
+.container { margin: 0 auto; max-width: 1200px; float: none; }
+
 .js-count-up, .js-alpha-count { -webkit-transition: all 2s ease-in-out; transition: all 2s ease-in-out; white-space: nowrap; }
 .js .js-count-up, .js .js-alpha-count { opacity: 0; }
 .js-count-up + *, .js-alpha-count + * { opacity: 0; }
@@ -297,7 +280,7 @@ table tbody th { font-weight: bold; }
 
 .js-alpha-count { -webkit-transition: all 1s ease-in-out; transition: all 1s ease-in-out; }
 
-.js-popins__piece { opacity: 0; }
+.js-popins-piece { opacity: 0; }
 
 .js .lightbox-info { display: none; }
 
@@ -362,6 +345,7 @@ a.htmlDownload:before { content: ""; display: inline-block; color: #4469CE; b
 @media screen and (max-width: 960px) { .sixths { width: 50%; } }
 @media screen and (max-width: 600px) { .sixths { width: 100%; } }
 .sixths.colspan5 { width: 83.33%; }
+@media screen and (max-width: 600px) { .sixths.colspan5 { width: 100%; } }
 
 /**********************************\
 	Resolution specific elements
@@ -427,8 +411,6 @@ input[type="radio"] + label:after, input[type="radio"] + label:before { border-r
 /**********************************
 			WHOLE PAGE
 **********************************/
-.container { margin: 0 auto; max-width: 1200px; }
-
 /**********************************
 			HEADER
 **********************************/
@@ -472,16 +454,16 @@ input[type="radio"] + label:after, input[type="radio"] + label:before { border-r
 /**********************************
 		Animations
 **********************************/
-.animation-demo-item { margin: 5px; padding: 20px; background: #000; color: #fff; text-align: center; font-size: 1.3em; }
+.animationDemoItem { margin: 5px; padding: 20px; background: #000; color: #fff; text-align: center; font-size: 1.3em; }
 
-.simple-animation-example { overflow: hidden; }
-.simple-animation-example .simple-example-piece { position: relative; }
-.simple-animation-example .simple1 { opacity: 0; }
-.simple-animation-example .simple2 { bottom: 100%; left: 100%; }
-.simple-animation-example .simple3 { -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); }
-.simple-animation-example.activate .simple1 { opacity: 1; }
-.simple-animation-example.stage2 .simple2 { -webkit-transition: all 0.5s ease-in-out; transition: all 0.5s ease-in-out; bottom: 0; left: 0; }
-.simple-animation-example.stage3 .simple3 { -webkit-transition: all 2s ease-in-out; transition: all 2s ease-in-out; -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); }
+.simpleAnimationExample { overflow: hidden; }
+.simpleAnimationExample .simpleAnimationExample-piece { position: relative; }
+.simpleAnimationExample .simple1 { opacity: 0; }
+.simpleAnimationExample .simple2 { bottom: 100%; left: 100%; }
+.simpleAnimationExample .simple3 { -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); }
+.simpleAnimationExample.activate .simple1 { opacity: 1; }
+.simpleAnimationExample.stage2 .simple2 { -webkit-transition: all 0.5s ease-in-out; transition: all 0.5s ease-in-out; bottom: 0; left: 0; }
+.simpleAnimationExample.stage3 .simple3 { -webkit-transition: all 2s ease-in-out; transition: all 2s ease-in-out; -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); }
 
 /* jQuery Custombox v1.1.3 - 2014/02/18 jQuery Modal Window Effects. http://dixso.github.io/custombox/ (c) 2014 Julio De La Calle - http://dixso.net - @dixso9  Under MIT License - http://www.opensource.org/licenses/mit-license.php */
 /* -------------------------------------------------
