X - Moving things around
I've been moving JS and SASS around trying to get the file structure the
way I want it

--- a/assets/sass/02-base/tools.scss
+++ b/assets/sass/02-base/tools.scss
@@ -75,4 +75,5 @@
 	&:active,:focus { @extend %anti-vh }
 }
 
+//remove default styling (good for submit buttons)
 .appearanceNone { @extend %appearanceNone; }
