X - Config files done
The config files are in the structure I want now  but they aren't
connected up with the stitching file yet

--- a/assets/sass/02-base/elements.scss
+++ b/assets/sass/02-base/elements.scss
@@ -2,24 +2,27 @@
 /*================================================*\
 	Base Element Styling
 ----------------------------------------------------
-	This file holds base styling for elements resets.
+	This file holds base styling for elements.
 	NO CLASSES ALLOWED!
 \*================================================*/
 
-
-//all elements are given border box box-sizing
 *, *:before, *:after {
+	//Makes fonts smoother
 	font-smoothing: antialiased;
-	//supposedly makes font cleaner but makes fonts not appear in safari
+
+	//supposedly this makes fonts cleaner but it makes fonts not appear in safari
 	//text-rendering: optimizeLegibility;
+
+	//all elements are given border box box-sizing
 	@include M-box-sizing(border-box);
 }
 
-html {
-	font-size: 62.5%; //Makes it easier to alter font size with em's. 1.3em = 13px
-}
+//Makes it easier to alter font size with rem's. 1.3rem = 13px
+html { font-size: 62.5%; }
 
-body { @include M-font-size(13); }//sets base font size
+//Sets default font size for the site to 1.3rem with a 13px backup.
+//Setting the font-size using the mixin is the best way to set fonts.
+body { @include M-font-size(13); }
 
 h1,h2,h3,h4,h5,h6,p,ul,ol,li {
 	//allows body elements to sit hard up against the top border of their parent element without causing spacing issues later in the text.
@@ -27,7 +30,7 @@ h1,h2,h3,h4,h5,h6,p,ul,ol,li {
 }
 
 /*HEADINGS*/
-h1, h2, h3, h4, h5, h6 { color: $col-heading-txt-1; font-weight: bold; }
+h1, h2, h3, h4, h5, h6 { color: $col-heading-txt-1; font-weight: $bold; }
 h1 { @include M-font-size(40); }
 h2 { @include M-font-size(30); color: $col-heading-txt-2; }
 h3 { @include M-font-size(25); }
@@ -49,3 +52,12 @@ a:hover { text-decoration: underline; }
 nav ul { @extend %noDots; }
 
 label, input[type=radio], input[type=checkbox] { cursor: pointer; }
+
+/************\
+    Tables
+\************/
+table{text-align:left; width:100%;
+	th, td { padding: 5px; }
+	thead th {font-weight: $bold;}
+	tbody th{font-weight: $bold;}
+}
