--- a/assets/sass/02-themes.scss
+++ b/assets/sass/02-themes.scss
@@ -1,5 +1,5 @@
 ﻿///*================================================*\
-//	THEMES - (Experimental)
+//	THEMES
 //----------------------------------------------------
 //	All theme related css goes here.
 //
