--- a/assets/sass/swordion-only.scss
+++ b/assets/sass/swordion-only.scss
@@ -1,6 +1,6 @@
 /**************************************************\
-	Styles for styling the starter kit.
-	Take these out at the start of the project.
+	Styles for styling the Swordion site.
+	Remove this at the start of the project.
 \*************************************************/
 
 //for testing selectivizr
