--- a/assets/sass/04-content-modules/download-links.scss
+++ b/assets/sass/04-content-modules/download-links.scss
@@ -1,6 +1,11 @@
-/****************\
-	File icons
-\***************/
+
+/*================================================*\
+	DOWNLOADABLE FILE LINKS
+//-----------------------------------------------
+//	Holds styles for links that lead to
+//	downloadable documents
+\*================================================*/
+
 
 %file-static-styles {
 	@extend %M-icon-static-styles;
