--- a/assets/sass/04-content-modules/lightbox.scss
+++ b/assets/sass/04-content-modules/lightbox.scss
@@ -1,8 +1,9 @@
-/*
- -------------------------------------------------
-				Custom lightbox styles
- -------------------------------------------------
-*/
+
+/*================================================*\
+	LIGHTBOX STYLES
+//-----------------------------------------------
+//	Holds the styles for lightbox pop ups
+\*================================================*/
 
 
 .js .lightbox-info { display: none; }
