--- a/assets/sass/04-content-modules/other.scss
+++ b/assets/sass/04-content-modules/other.scss
@@ -1,4 +1,13 @@
 
+/*================================================*\
+	OTHER MODULES
+//-----------------------------------------------
+//	If it's small and doesn't really fit anywhere
+//	where else you can out it here. If it starts
+//	getting big, make a new file for it.
+\*================================================*/
+
+
 .skipLink-primary {
 	position: fixed;
 	top: 0;
