--- a/assets/sass/03-print.scss
+++ b/assets/sass/03-print.scss
@@ -1,8 +1,9 @@
-/************************\
 
-	Print styles
-
-\***********************/
+/*================================================*\
+	PRINT STYLES
+//-----------------------------------------------
+//	Holds the print styles for the site
+\*================================================*/
 
 *{background:transparent!important;color:black!important;text-shadow:none!important;filter:none!important;-ms-filter:none!important;}/*Black prints faster: sanbeiji.com/archives/953*/
 a,a:visited{color:#444!important;text-decoration:underline;}
