--- a/assets/sass/output-files/style.scss
+++ b/assets/sass/output-files/style.scss
@@ -1,4 +1,16 @@
-$lt-ie9: false;
-$main-sheet: true;//set to false if not the main style sheet
 
-@import "../_04-main-stitching-file.scss";
+/*================================================*\
+	MAIN CSS OUTPUT FILE (MODERN BROWSERS)
+//-----------------------------------------------
+//	This is the file that compiles the css for
+//	modern browsers
+\*================================================*/
+
+//Allows CSS3 in the compilation
+//prevents IE hacks appearing in outputted css
+$lt-ie9: false;
+
+//If set to true, css rules in the config and mixins folders (like the icon class names for example) will be outputted to the css. If set to false, it assumes that those classes have already been stated previously in the main style sheet so it will ignore them when compiling the css.
+$main-sheet: true;
+
+@import "../01-import-styles.scss";
