--- a/assets/sass/00-import-functions.scss
+++ b/assets/sass/00-import-functions.scss
@@ -1,6 +1,6 @@
 
 ///*================================================*\
-//	CONFIG STITCHING FILE
+//	FUNCTIONS IMPORT FILE
 //----------------------------------------------------
 //	All global variables, mixins and functions
 //	are imported from this file.
@@ -10,12 +10,13 @@
 //
 //	This is so if you bring in more sperate style
 //	sheets, you can easily import all the variables
-//	and mixins for use in those style sheets.
-//	Without duplicating css rules
+//	and mixins for use in those style sheets
+//	without duplicating css rules.
 //*================================================*/
 
 
 //all global variables go in these files
+//@import "import-maps/config-map.scss"; //for when the grunt bug is fixed
 @import "00-config-files/break-points.scss";
 @import "00-config-files/colors.scss";
 @import "00-config-files/fonts.scss";
@@ -34,4 +35,3 @@
 @import "01-global-mixins/_backgrounds.scss";
 @import "01-global-mixins/_css-shapes.scss";
 @import "01-global-mixins/_animation.scss";
-@import "01-global-mixins/_project-specific.scss";
