Non-conditional JS merged into single file
The javascript is now all merged into a single JS file where possible.
The files that are conditionally loaded are still loaded using yepnope
though.

--- a/assets/css/media-merge/style-lt-ie9.css
+++ b/assets/css/media-merge/style-lt-ie9.css
@@ -2212,6 +2212,10 @@ a.htmlDownload:before {
 
 /*this should appear in the IE8 style sheet but not the regular one*/
 
+/*================================================*\
+	THEMES
+\*================================================*/
+
 body.theme-dark .themed-nav {
 	background: #000;
 	color: #fff;
