--- a/assets/sass/02-themes.scss
+++ b/assets/sass/02-themes.scss
@@ -1,6 +1,6 @@
-﻿///*================================================*\
-//	THEMES
-//----------------------------------------------------
+﻿/*================================================*\
+	THEMES
+\*================================================*/
 //	All theme related css goes here.
 //
 //	Change theme by giving the body a class called:
@@ -12,7 +12,7 @@
 //
 //	Add your css rules exactly as you would normaly
 //	inside the css attributes section of the array
-//*================================================*/
+//=================================================
 
 //list of themes
 $themes: (
